test/Parser/semicolon.src
// V %srcc --parse --verify %s
program test;


{
    int y // expected-error: Expected ';'
    int z
}

{
    // These comments are purposefully on the previous line to test that we
    // handle source locations right on the '\n' character properly.
    // expected-error@+1: Expected ';'
    int x

    int
    y
}
